<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout style="@style/payment_form_container">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.judopay.view.CardTypeImageView
                    android:id="@+id/card_type_view"
                    style="@style/judo_card_image"
                    tools:ignore="RtlHardcoded" />

                <com.judopay.view.JudoTextInputLayout
                    android:id="@+id/card_number_input_layout"
                    style="@style/input_layout">

                    <EditText
                        android:id="@+id/card_number_edit_text"
                        style="@style/judo_card_number" />

                </com.judopay.view.JudoTextInputLayout>

                <TextView
                    android:id="@+id/card_number_helper_text"
                    style="@style/judo_hint_text"
                    android:layout_below="@id/card_number_input_layout"
                    android:text="@string/long_card_number"
                    tools:visibility="visible" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/start_date_issue_number_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2"
                tools:visibility="visible">

                <com.judopay.view.JudoTextInputLayout
                    android:id="@+id/start_date_input_layout"
                    style="@style/input_layout"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/start_date_edit_text"
                        style="@style/judo_start_date"
                        tools:ignore="TextFields" />

                </com.judopay.view.JudoTextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.judopay.view.JudoTextInputLayout
                        android:id="@+id/issue_number_input_layout"
                        style="@style/input_layout">

                        <EditText
                            android:id="@+id/issue_number_edit_text"
                            style="@style/judo_issue_number" />

                    </com.judopay.view.JudoTextInputLayout>

                    <TextView
                        android:id="@+id/issue_number_helper_text"
                        style="@style/judo_hint_text"
                        android:text="@string/issue_number_front_of_card"
                        tools:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.judopay.view.JudoTextInputLayout
                    android:id="@+id/expiry_date_input_layout"
                    style="@style/input_layout"
                    android:layout_weight="1">

                    <com.judopay.view.DateEditText
                        android:id="@+id/expiry_date_edit_text"
                        style="@style/judo_expiry_date"
                        android:layout_weight="1"
                        tools:ignore="TextFields" />

                </com.judopay.view.JudoTextInputLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.judopay.view.CvvImageView
                        android:id="@+id/cvv_image_view"
                        style="@style/judo_cvv_image"
                        tools:ignore="RtlHardcoded" />

                    <com.judopay.view.JudoTextInputLayout
                        android:id="@+id/cvv_input_layout"
                        style="@style/input_layout">

                        <EditText
                            android:id="@+id/cvv_edit_text"
                            style="@style/judo_cvv"
                            android:layout_weight="1" />

                    </com.judopay.view.JudoTextInputLayout>

                    <TextView
                        android:id="@+id/cvv_helper_text"
                        style="@style/judo_hint_text"
                        android:layout_below="@id/cvv_input_layout"
                        android:text="@string/security_code"
                        tools:visibility="visible" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/country_postcode_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:weightSum="2"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.judopay.view.CountrySpinner
                        android:id="@+id/country_spinner"
                        style="@style/judo_country_spinner" />

                    <TextView
                        android:id="@+id/cards_accepted_error_text"
                        style="@style/judo_cards_accepted_text"
                        android:text="@string/country_cards_accepted_message"
                        tools:visibility="visible" />

                </LinearLayout>

                <com.judopay.view.JudoTextInputLayout
                    android:id="@+id/post_code_input_layout"
                    style="@style/input_layout"
                    android:layout_width="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/post_code_edit_text"
                        style="@style/judo_postcode"
                        android:hint="@string/postcode_uk"
                        tools:ignore="UnusedAttribute" />

                </com.judopay.view.JudoTextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/payment_button"
        style="@style/judo_payment_button" />

</FrameLayout>