<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <com.judopay.view.CardSecurityCodeView
        android:id="@+id/security_code_image_view"
        style="@style/Widget.Judo.CardImage"
        android:layout_marginTop="15dp"
        tools:ignore="RtlHardcoded" />

    <com.judopay.view.JudoTextInputLayout
        android:id="@+id/security_code_input_layout"
...
