...
        android:layout_marginEnd="@dimen/space_8"
        android:fontFamily="@font/sf_pro_display_regular"
        android:padding="0dp"
        android:text="@string/you_will_pay"
        android:textColor="@color/black"
        android:textSize="@dimen/body"
        app:layout_constraintEnd_toStartOf="@+id/payButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/payButton" />

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="0dp"
...
