...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.judopay.judokit.android.ui.ideal.components.IdealWebView
        android:id="@+id/idealWebView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
...
