...

    <!--    Google Pay not supported on device-->
    <string name="jp_error_google_pay_not_supported_desc" translatable="false">Google Pay is not supported on this device.</string>
    <string name="jp_error_google_pay_not_supported_reason" translatable="false">A Google Pay transaction was attempted on a device that either does not support, or does not have Google Pay set up.</string>

    <!--    Backend request failed-->
    <string name="jp_error_request_failed_desc" translatable="false">The request has failed or responded without data.</string>
    <string name="jp_error_request_failed_reason" translatable="false">The transaction response returned without any data or there was an error while forming the request.</string>

    <!--    Network failed-->
    <string name="jp_error_network_failed_desc" translatable="false">No internet connection.</string>
    <string name="jp_error_network_failed_reason" translatable="false">Could not connect to server due to network failure.</string>

...
